--- a/src/theme/styles.css
+++ b/src/theme/styles.css
@@ -1,1 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Murecho:wght@300;400;700&display=swap');
+
+#trade-history-table{
+  overflow-x: scroll;
+}
