--- a/src/styles.css
+++ b/src/styles.css
@@ -1,23 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Murecho:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Murecho:wght@300;400;700&display=swap'); 
 
-/* width */
+/* global bar thickness */
 ::-webkit-scrollbar {
-  height: 5px; /* horizontal scrollbar height */
-  width: 5px; /* vertical scrollbar width */
+  width: 10px;
 }
 
 /* Track */
-::-webkit-scrollbar-track {
+/* ::-webkit-scrollbar-track {
   background: transparent; 
-}
+} */
  
 /* Handle */
-::-webkit-scrollbar-thumb {
+/* ::-webkit-scrollbar-thumb {
   background: var(--chakra-colors-brand-gray-100);
   border-radius: 10px;
-}
+} */
 
 /* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
+/* ::-webkit-scrollbar-thumb:hover {
   background: var(--chakra-colors-brand-gray-200);
-}
+} */
